# pytorch_mnist

./: .gitignore  cnn.py  get_mnist.py  main.py  pyproject.toml  test.py  train.py
src/pytorch_mnist/model/: cnn.py
src/pytorch_mnist/process/: fit.py
src/pytorch_mnist/scripts/: train_model.py
src/pytorch_mnist/utils/: get_mnist.py
tests/: test_pytorch_mnist.py
