[tool.poetry]
name = "pytorch_mnist"
version = "0.1.0"
description = ""
authors = ["dash-pedro <pedro.rodrigues@dashmote.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.13.8"
mypy = "^0.950"
black = {version = "^22.3.0", allow-prereleases = true}
pylama = "^8.3.8"
pydocstyle = "^6.1.1"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
